--- a/src/main/resources/assets/gardenkingmod/lang/en_us.json
+++ b/src/main/resources/assets/gardenkingmod/lang/en_us.json
@@ -3,6 +3,8 @@
 "item.gardenkingmod.garden_coin": "Garden Coin",
 "container.gardenkingmod.market": "Garden Market",
 "screen.gardenkingmod.market.sell": "Sell",
+"screen.gardenkingmod.market.sale_result": "You sold %1$s crop and earned %2$s garden coins.",
+"screen.gardenkingmod.market.lifetime": "Lifetime earnings: %1$s garden coins.",
 "message.gardenkingmod.market.sold": "Sold %1$s Croptopia crops for %2$s coins.",
 "message.gardenkingmod.market.sold.lifetime": "Sold %1$s Croptopia crops for %2$s coins. Lifetime earnings: %3$s coins.",
 "message.gardenkingmod.market.empty": "There are no crops to sell.",
