--- a/src/main/resources/assets/gardenkingmod/lang/en_us.json
+++ b/src/main/resources/assets/gardenkingmod/lang/en_us.json
@@ -3,7 +3,9 @@
 "item.gardenkingmod.garden_coin": "Garden Coin",
 "container.gardenkingmod.market": "Garden Market",
 "screen.gardenkingmod.market.sell": "Sell",
-"screen.gardenkingmod.market.sale_result": "You sold %1$s crop and earned %2$s garden coins.",
+"screen.gardenkingmod.market.sale_result": "You sold %1$s crops and earned %2$s garden coins.",
+"screen.gardenkingmod.market.sale_result_detailed": "You sold %1$s and earned %2$s garden coins.",
+"screen.gardenkingmod.market.sale_result_item": "%1$s %2$s",
 "screen.gardenkingmod.market.lifetime": "Lifetime earnings: %1$s garden coins.",
 "message.gardenkingmod.market.sold": "Sold %1$s Croptopia crops for %2$s coins.",
 "message.gardenkingmod.market.sold.lifetime": "Sold %1$s Croptopia crops for %2$s coins. Lifetime earnings: %3$s coins.",
