--- a/src/main/resources/assets/gardenkingmod/lang/en_us.json
+++ b/src/main/resources/assets/gardenkingmod/lang/en_us.json
@@ -10,7 +10,7 @@
 "message.gardenkingmod.market.sold": "Sold %1$s Croptopia crops for %2$s coins.",
 "message.gardenkingmod.market.sold.lifetime": "Sold %1$s Croptopia crops for %2$s coins. Lifetime earnings: %3$s coins.",
 "message.gardenkingmod.market.empty": "There are no crops to sell.",
-"message.gardenkingmod.market.invalid": "Only Croptopia crops can be sold here!",
+"message.gardenkingmod.market.invalid": "Only Crops and Food can be sold here!",
 "scoreboard.gardenkingmod.garden_currency": "Garden Coins",
 "tooltip.gardenkingmod.crop_tier": "Tier: %s",
 "tooltip.gardenkingmod.crop_tier.tier_1": "Tier 1",
