rotten carrot register

--- a/src/main/resources/assets/gardenkingmod/lang/en_us.json
+++ b/src/main/resources/assets/gardenkingmod/lang/en_us.json
@@ -18,5 +18,6 @@
   "tooltip.gardenkingmod.crop_tier.tier_3": "Tier 3",
   "tooltip.gardenkingmod.crop_tier.tier_4": "Tier 4",
   "tooltip.gardenkingmod.crop_tier.tier_5": "Tier 5",
-  "item.gardenkingmod.rotten_wheat": "Rotten Wheat"
+  "item.gardenkingmod.rotten_wheat": "Rotten Wheat",
+  "item.gardenkingmod.rotten_carrot": "Rotten Carrot"
 }
