--- a/src/main/resources/assets/gardenkingmod/lang/en_us.json
+++ b/src/main/resources/assets/gardenkingmod/lang/en_us.json
@@ -1,4 +1,7 @@
 {
+  "block.gardenkingmod.market_block": "Garden Market",
+  "container.gardenkingmod.market": "Garden Market",
+  "item.gardenkingmod.garden_coin": "Garden Coin",
   "message.gardenkingmod.market.empty": "There are no crops to sell.",
   "message.gardenkingmod.market.invalid": "Only Crops and Food can be sold here!",
   "message.gardenkingmod.market.sold": "Sold %1$s Croptopia crops for %2$s coins.",
@@ -14,7 +17,7 @@
   "tooltip.gardenkingmod.crop_tier.tier_2": "Tier 2",
   "tooltip.gardenkingmod.crop_tier.tier_3": "Tier 3",
   "tooltip.gardenkingmod.crop_tier.tier_4": "Tier 4",
-  "tooltip.gardenkingmod.crop_tier.tier_5": "Tier 5"
+  "tooltip.gardenkingmod.crop_tier.tier_5": "Tier 5",
   "item.gardenkingmod.rotten_coffee_beans": "Rotten Coffee Bean",
   "item.gardenkingmod.rotten_corn": "Rotten Corn",
   "item.gardenkingmod.rotten_cranberry": "Rotten Cranberry",
