--- a/src/main/resources/assets/gardenkingmod/lang/en_us.json
+++ b/src/main/resources/assets/gardenkingmod/lang/en_us.json
@@ -18,6 +18,30 @@
   "tooltip.gardenkingmod.crop_tier.tier_3": "Tier 3",
   "tooltip.gardenkingmod.crop_tier.tier_4": "Tier 4",
   "tooltip.gardenkingmod.crop_tier.tier_5": "Tier 5",
+  "item.gardenkingmod.rotten_almond": "Rotten Almond",
+  "item.gardenkingmod.rotten_apple": "Rotten Apple",
+  "item.gardenkingmod.rotten_apricot": "Rotten Apricot",
+  "item.gardenkingmod.rotten_artichoke": "Rotten Artichoke",
+  "item.gardenkingmod.rotten_asparagus": "Rotten Asparagus",
+  "item.gardenkingmod.rotten_avocado": "Rotten Avocado",
+  "item.gardenkingmod.rotten_banana": "Rotten Banana",
+  "item.gardenkingmod.rotten_barley": "Rotten Barley",
+  "item.gardenkingmod.rotten_basil": "Rotten Basil",
+  "item.gardenkingmod.rotten_beetroot": "Rotten Beetroot",
+  "item.gardenkingmod.rotten_bellpepper": "Rotten Bellpepper",
+  "item.gardenkingmod.rotten_blackbean": "Rotten Blackbean",
+  "item.gardenkingmod.rotten_blackberry": "Rotten Blackberry",
+  "item.gardenkingmod.rotten_blueberry": "Rotten Blueberry",
+  "item.gardenkingmod.rotten_broccoli": "Rotten Broccoli",
+  "item.gardenkingmod.rotten_cabbage": "Rotten Cabbage",
+  "item.gardenkingmod.rotten_cantaloupe": "Rotten Cantaloupe",
+  "item.gardenkingmod.rotten_carrot": "Rotten Carrot",
+  "item.gardenkingmod.rotten_cashew": "Rotten Cashew",
+  "item.gardenkingmod.rotten_cauliflower": "Rotten Cauliflower",
+  "item.gardenkingmod.rotten_celery": "Rotten Celery",
+  "item.gardenkingmod.rotten_cherry": "Rotten Cherry",
+  "item.gardenkingmod.rotten_chile_pepper": "Rotten Chile Pepper",
+  "item.gardenkingmod.rotten_coconut": "Rotten Coconut",
   "item.gardenkingmod.rotten_coffee_beans": "Rotten Coffee Bean",
   "item.gardenkingmod.rotten_corn": "Rotten Corn",
   "item.gardenkingmod.rotten_cranberry": "Rotten Cranberry",
