new rotten item textures

--- a/src/main/resources/assets/gardenkingmod/lang/en_us.json
+++ b/src/main/resources/assets/gardenkingmod/lang/en_us.json
@@ -9,7 +9,7 @@
   "item.gardenkingmod.ruby_helmet": "Ruby Helmet",
   "item.gardenkingmod.ruby_chestplate": "Ruby Chestplate",
   "item.gardenkingmod.ruby_leggings": "Ruby Leggings",
-  "item.gardenkingmod.ruby_boots": "Ruby Boots"
+  "item.gardenkingmod.ruby_boots": "Ruby Boots",
 
   "block.gardenkingmod.market_block": "Garden Market",
   "container.gardenkingmod.market": "Garden Market",
