--- a/src/main/resources/assets/gardenkingmod/lang/en_us.json
+++ b/src/main/resources/assets/gardenkingmod/lang/en_us.json
@@ -15,6 +15,7 @@
 
   "block.gardenkingmod.market_block": "Garden Market",
   "container.gardenkingmod.market": "Garden Market",
+  "container.gardenkingmod.scarecrow": "Field Scarecrow",
   "item.gardenkingmod.garden_coin": "Garden Coin",
   "message.gardenkingmod.market.empty": "There are no crops to sell.",
   "message.gardenkingmod.market.invalid": "Only Crops and Food can be sold here!",
