Add scarecrow red shirt cosmetic

--- a/src/main/resources/assets/gardenkingmod/lang/en_us.json
+++ b/src/main/resources/assets/gardenkingmod/lang/en_us.json
@@ -10,6 +10,7 @@
   "item.gardenkingmod.ruby_chestplate": "Ruby Chestplate",
   "item.gardenkingmod.ruby_leggings": "Ruby Leggings",
   "item.gardenkingmod.ruby_boots": "Ruby Boots",
+  "item.gardenkingmod.scarecrow_shirt_red": "Red Scarecrow Shirt",
 
   "block.gardenkingmod.ruby_block": "Ruby Block",
 
