--- a/src/main/resources/assets/gardenkingmod/lang/en_us.json
+++ b/src/main/resources/assets/gardenkingmod/lang/en_us.json
@@ -11,6 +11,7 @@
   "item.gardenkingmod.ruby_leggings": "Ruby Leggings",
   "item.gardenkingmod.ruby_boots": "Ruby Boots",
   "item.gardenkingmod.scarecrow_shirt": "Scarecrow Shirt",
+  "item.gardenkingmod.scarecrow_head": "Scarecrow Head",
 
   "block.gardenkingmod.ruby_block": "Ruby Block",
 
