changing scarecrow item displays

--- a/src/main/resources/assets/gardenkingmod/lang/en_us.json
+++ b/src/main/resources/assets/gardenkingmod/lang/en_us.json
@@ -12,6 +12,7 @@
   "item.gardenkingmod.ruby_boots": "Ruby Boots",
   "item.gardenkingmod.scarecrow_shirt": "Scarecrow Shirt",
   "item.gardenkingmod.scarecrow_head": "Scarecrow Head",
+  "item.gardenkingmod.scarecrow_hat": "Scarecrow Hat",
 
   "block.gardenkingmod.ruby_block": "Ruby Block",
 
