Implement garden shop scrollable offer list

--- a/src/main/resources/assets/gardenkingmod/lang/en_us.json
+++ b/src/main/resources/assets/gardenkingmod/lang/en_us.json
@@ -32,6 +32,9 @@
   "screen.gardenkingmod.market.sale_result_detailed": "You sold %1$s and earned %2$s garden coins.",
   "screen.gardenkingmod.market.sale_result_item": "%1$s %2$s",
   "screen.gardenkingmod.market.sell": "Sell",
+  "screen.gardenkingmod.garden_shop.offers": "OFFERS",
+  "screen.gardenkingmod.garden_shop.buy_button": "BUY",
+  "screen.gardenkingmod.garden_shop.price": "%s Garden Coins",
   "tooltip.gardenkingmod.crop_tier": "Tier: %s",
   "tooltip.gardenkingmod.built_in_fortune": "Built-in %s %s",
   "tooltip.gardenkingmod.crop_tier.tier_1": "Tier 1",
