Add obsidian gear items

--- a/src/main/resources/assets/gardenkingmod/lang/en_us.json
+++ b/src/main/resources/assets/gardenkingmod/lang/en_us.json
@@ -10,6 +10,15 @@
   "item.gardenkingmod.ruby_chestplate": "Ruby Chestplate",
   "item.gardenkingmod.ruby_leggings": "Ruby Leggings",
   "item.gardenkingmod.ruby_boots": "Ruby Boots",
+  "item.gardenkingmod.obsidian_sword": "Obsidian Sword",
+  "item.gardenkingmod.obsidian_pickaxe": "Obsidian Pickaxe",
+  "item.gardenkingmod.obsidian_axe": "Obsidian Axe",
+  "item.gardenkingmod.obsidian_shovel": "Obsidian Shovel",
+  "item.gardenkingmod.obsidian_hoe": "Obsidian Hoe",
+  "item.gardenkingmod.obsidian_helmet": "Obsidian Helmet",
+  "item.gardenkingmod.obsidian_chestplate": "Obsidian Chestplate",
+  "item.gardenkingmod.obsidian_leggings": "Obsidian Leggings",
+  "item.gardenkingmod.obsidian_boots": "Obsidian Boots",
   "item.gardenkingmod.scarecrow_shirt": "Scarecrow Shirt",
   "item.gardenkingmod.scarecrow_head": "Scarecrow Head",
   "item.gardenkingmod.scarecrow_hat": "Scarecrow Hat",
