Add emerald equipment set

--- a/src/main/resources/assets/gardenkingmod/lang/en_us.json
+++ b/src/main/resources/assets/gardenkingmod/lang/en_us.json
@@ -19,6 +19,15 @@
   "item.gardenkingmod.obsidian_chestplate": "Obsidian Chestplate",
   "item.gardenkingmod.obsidian_leggings": "Obsidian Leggings",
   "item.gardenkingmod.obsidian_boots": "Obsidian Boots",
+  "item.gardenkingmod.emerald_sword": "Emerald Sword",
+  "item.gardenkingmod.emerald_pickaxe": "Emerald Pickaxe",
+  "item.gardenkingmod.emerald_axe": "Emerald Axe",
+  "item.gardenkingmod.emerald_shovel": "Emerald Shovel",
+  "item.gardenkingmod.emerald_hoe": "Emerald Hoe",
+  "item.gardenkingmod.emerald_helmet": "Emerald Helmet",
+  "item.gardenkingmod.emerald_chestplate": "Emerald Chestplate",
+  "item.gardenkingmod.emerald_leggings": "Emerald Leggings",
+  "item.gardenkingmod.emerald_boots": "Emerald Boots",
   "item.gardenkingmod.scarecrow_shirt": "Scarecrow Shirt",
   "item.gardenkingmod.scarecrow_head": "Scarecrow Head",
   "item.gardenkingmod.scarecrow_hat": "Scarecrow Hat",
