Add blue sapphire equipment set

--- a/src/main/resources/assets/gardenkingmod/lang/en_us.json
+++ b/src/main/resources/assets/gardenkingmod/lang/en_us.json
@@ -1,15 +1,25 @@
 {
 
   "item.gardenkingmod.ruby": "Ruby",
+  "item.gardenkingmod.blue_sapphire": "Blue Sapphire",
   "item.gardenkingmod.ruby_sword": "Ruby Sword",
+  "item.gardenkingmod.blue_sapphire_sword": "Blue Sapphire Sword",
   "item.gardenkingmod.ruby_pickaxe": "Ruby Pickaxe",
+  "item.gardenkingmod.blue_sapphire_pickaxe": "Blue Sapphire Pickaxe",
   "item.gardenkingmod.ruby_axe": "Ruby Axe",
+  "item.gardenkingmod.blue_sapphire_axe": "Blue Sapphire Axe",
   "item.gardenkingmod.ruby_shovel": "Ruby Shovel",
+  "item.gardenkingmod.blue_sapphire_shovel": "Blue Sapphire Shovel",
   "item.gardenkingmod.ruby_hoe": "Ruby Hoe",
+  "item.gardenkingmod.blue_sapphire_hoe": "Blue Sapphire Hoe",
   "item.gardenkingmod.ruby_helmet": "Ruby Helmet",
+  "item.gardenkingmod.blue_sapphire_helmet": "Blue Sapphire Helmet",
   "item.gardenkingmod.ruby_chestplate": "Ruby Chestplate",
+  "item.gardenkingmod.blue_sapphire_chestplate": "Blue Sapphire Chestplate",
   "item.gardenkingmod.ruby_leggings": "Ruby Leggings",
+  "item.gardenkingmod.blue_sapphire_leggings": "Blue Sapphire Leggings",
   "item.gardenkingmod.ruby_boots": "Ruby Boots",
+  "item.gardenkingmod.blue_sapphire_boots": "Blue Sapphire Boots",
   "item.gardenkingmod.obsidian_sword": "Obsidian Sword",
   "item.gardenkingmod.obsidian_pickaxe": "Obsidian Pickaxe",
   "item.gardenkingmod.obsidian_axe": "Obsidian Axe",
