Add pearl equipment set

--- a/src/main/resources/assets/gardenkingmod/lang/en_us.json
+++ b/src/main/resources/assets/gardenkingmod/lang/en_us.json
@@ -3,33 +3,43 @@
   "item.gardenkingmod.ruby": "Ruby",
   "item.gardenkingmod.blue_sapphire": "Blue Sapphire",
   "item.gardenkingmod.topaz": "Topaz",
+  "item.gardenkingmod.pearl": "Pearl",
   "item.gardenkingmod.ruby_sword": "Ruby Sword",
   "item.gardenkingmod.blue_sapphire_sword": "Blue Sapphire Sword",
   "item.gardenkingmod.topaz_sword": "Topaz Sword",
+  "item.gardenkingmod.pearl_sword": "Pearl Sword",
   "item.gardenkingmod.ruby_pickaxe": "Ruby Pickaxe",
   "item.gardenkingmod.blue_sapphire_pickaxe": "Blue Sapphire Pickaxe",
   "item.gardenkingmod.topaz_pickaxe": "Topaz Pickaxe",
+  "item.gardenkingmod.pearl_pickaxe": "Pearl Pickaxe",
   "item.gardenkingmod.ruby_axe": "Ruby Axe",
   "item.gardenkingmod.blue_sapphire_axe": "Blue Sapphire Axe",
   "item.gardenkingmod.topaz_axe": "Topaz Axe",
+  "item.gardenkingmod.pearl_axe": "Pearl Axe",
   "item.gardenkingmod.ruby_shovel": "Ruby Shovel",
   "item.gardenkingmod.blue_sapphire_shovel": "Blue Sapphire Shovel",
   "item.gardenkingmod.topaz_shovel": "Topaz Shovel",
+  "item.gardenkingmod.pearl_shovel": "Pearl Shovel",
   "item.gardenkingmod.ruby_hoe": "Ruby Hoe",
   "item.gardenkingmod.blue_sapphire_hoe": "Blue Sapphire Hoe",
   "item.gardenkingmod.topaz_hoe": "Topaz Hoe",
+  "item.gardenkingmod.pearl_hoe": "Pearl Hoe",
   "item.gardenkingmod.ruby_helmet": "Ruby Helmet",
   "item.gardenkingmod.blue_sapphire_helmet": "Blue Sapphire Helmet",
   "item.gardenkingmod.topaz_helmet": "Topaz Helmet",
+  "item.gardenkingmod.pearl_helmet": "Pearl Helmet",
   "item.gardenkingmod.ruby_chestplate": "Ruby Chestplate",
   "item.gardenkingmod.blue_sapphire_chestplate": "Blue Sapphire Chestplate",
   "item.gardenkingmod.topaz_chestplate": "Topaz Chestplate",
+  "item.gardenkingmod.pearl_chestplate": "Pearl Chestplate",
   "item.gardenkingmod.ruby_leggings": "Ruby Leggings",
   "item.gardenkingmod.blue_sapphire_leggings": "Blue Sapphire Leggings",
   "item.gardenkingmod.topaz_leggings": "Topaz Leggings",
+  "item.gardenkingmod.pearl_leggings": "Pearl Leggings",
   "item.gardenkingmod.ruby_boots": "Ruby Boots",
   "item.gardenkingmod.blue_sapphire_boots": "Blue Sapphire Boots",
   "item.gardenkingmod.topaz_boots": "Topaz Boots",
+  "item.gardenkingmod.pearl_boots": "Pearl Boots",
   "item.gardenkingmod.obsidian_sword": "Obsidian Sword",
   "item.gardenkingmod.obsidian_pickaxe": "Obsidian Pickaxe",
   "item.gardenkingmod.obsidian_axe": "Obsidian Axe",
