--- a/src/main/resources/assets/gardenkingmod/lang/en_us.json
+++ b/src/main/resources/assets/gardenkingmod/lang/en_us.json
@@ -74,9 +74,9 @@
   "block.gardenkingmod.ruby_block": "Ruby Block",
 
   "block.gardenkingmod.market_block": "Garden Market",
-  "block.gardenkingmod.garden_shop_block": "Garden Shop",
+  "block.gardenkingmod.gear_shop_block": "Gear Shop",
   "container.gardenkingmod.market": "Garden Market",
-  "container.gardenkingmod.garden_shop": "Garden Shop",
+  "container.gardenkingmod.gear_shop": "Gear Shop",
   "container.gardenkingmod.scarecrow": "Scarecrow",
   "item.gardenkingmod.garden_coin": "Garden Coin",
   "item.gardenkingmod.coin_sack": "Coin Sack",
@@ -91,11 +91,11 @@
   "screen.gardenkingmod.market.sale_result_detailed": "You sold %1$s and earned %2$s garden coins.",
   "screen.gardenkingmod.market.sale_result_item": "%1$s %2$s",
   "screen.gardenkingmod.market.sell": "Sell",
-  "screen.gardenkingmod.garden_shop.offers": "OFFERS",
-  "screen.gardenkingmod.garden_shop.buy_button": "BUY",
-  "screen.gardenkingmod.garden_shop.cost_label": "COST:",
-  "screen.gardenkingmod.garden_shop.price": "%s Garden Coins",
-  "screen.gardenkingmod.garden_shop.cost_count": "%s required",
+  "screen.gardenkingmod.gear_shop.offers": "OFFERS",
+  "screen.gardenkingmod.gear_shop.buy_button": "BUY",
+  "screen.gardenkingmod.gear_shop.cost_label": "COST:",
+  "screen.gardenkingmod.gear_shop.price": "%s Garden Coins",
+  "screen.gardenkingmod.gear_shop.cost_count": "%s required",
   "tooltip.gardenkingmod.crop_tier": "Tier: %s",
   "tooltip.gardenkingmod.built_in_fortune": "Built-in %s %s",
   "tooltip.gardenkingmod.crop_tier.tier_1": "Tier 1",
