--- a/src/main/resources/assets/gardenkingmod/lang/en_us.json
+++ b/src/main/resources/assets/gardenkingmod/lang/en_us.json
@@ -91,6 +91,12 @@
   "screen.gardenkingmod.market.sale_result_detailed": "You sold %1$s and earned %2$s garden coins.",
   "screen.gardenkingmod.market.sale_result_item": "%1$s %2$s",
   "screen.gardenkingmod.market.sell": "Sell",
+  "screen.gardenkingmod.market.tab.sell": "Sell",
+  "screen.gardenkingmod.market.tab.buy": "Buy",
+  "screen.gardenkingmod.market.offers": "OFFERS",
+  "screen.gardenkingmod.market.cost_label": "COST",
+  "screen.gardenkingmod.market.buy_label": "BUY",
+  "screen.gardenkingmod.market.cost_count": "%s required",
   "screen.gardenkingmod.gear_shop.offers": "OFFERS",
   "screen.gardenkingmod.gear_shop.buy_button": "BUY",
   "screen.gardenkingmod.gear_shop.cost_label": "COST:",
