--- a/src/main/resources/assets/gardenkingmod/lang/en_us.json
+++ b/src/main/resources/assets/gardenkingmod/lang/en_us.json
@@ -86,10 +86,10 @@
   "message.gardenkingmod.market.sold": "Sold %1$s Croptopia crops for %2$s coins.",
   "message.gardenkingmod.market.sold.lifetime": "Sold %1$s Croptopia crops for %2$s coins. Lifetime earnings: %3$s coins.",
   "scoreboard.gardenkingmod.garden_currency": "Garden Coins",
-  "screen.gardenkingmod.market.sale_result_sold": "You sold %1$s crops",
-  "screen.gardenkingmod.market.sale_result_sold_detailed": "You sold %1$s",
-  "screen.gardenkingmod.market.sale_result_earned": "You earned %1$s Garden Coins",
-  "screen.gardenkingmod.market.sale_result_lifetime": "Lifetime earnings: %1$s",
+  "screen.gardenkingmod.market.sale_result_sold": "Sold: %1$s crops",
+  "screen.gardenkingmod.market.sale_result_sold_detailed": "Sold: %1$s",
+  "screen.gardenkingmod.market.sale_result_earned": "Earned: %1$s Garden Coins",
+  "screen.gardenkingmod.market.sale_result_lifetime": "Lifetime Earnings: %1$s",
   "screen.gardenkingmod.market.sale_result_item": "%1$s %2$s",
   "screen.gardenkingmod.market.sell": "Sell",
   "screen.gardenkingmod.market.tab.sell": "Sell",
