--- a/src/main/resources/assets/gardenkingmod/lang/en_us.json
+++ b/src/main/resources/assets/gardenkingmod/lang/en_us.json
@@ -83,6 +83,10 @@
   "item.gardenkingmod.garden_coin": "Garden Coin",
   "item.gardenkingmod.coin_sack": "Coin Sack",
   "item.gardenkingmod.dollar": "Dollar",
+  "item.gardenkingmod.wallet": "Wallet",
+  "tooltip.gardenkingmod.wallet.unbound": "Owner: Unbound",
+  "tooltip.gardenkingmod.wallet.owner": "Owner: %s",
+  "tooltip.gardenkingmod.wallet.balance": "Bank Balance: %s Garden Coins",
   "message.gardenkingmod.market.empty": "There are no crops to sell.",
   "message.gardenkingmod.market.invalid": "Only Crops and Food can be sold here!",
   "message.gardenkingmod.market.sold": "Sold %1$s Croptopia crops for %2$s coins.",
