--- a/src/main/resources/assets/gardenkingmod/lang/en_us.json
+++ b/src/main/resources/assets/gardenkingmod/lang/en_us.json
@@ -80,19 +80,18 @@
   "container.gardenkingmod.gear_shop": "Gear Shop",
   "container.gardenkingmod.scarecrow": "Scarecrow",
   "container.gardenkingmod.bank": "Village Bank",
-  "item.gardenkingmod.garden_coin": "Garden Coin",
-  "item.gardenkingmod.coin_sack": "Coin Sack",
   "item.gardenkingmod.dollar": "Dollar",
   "item.gardenkingmod.wallet": "Wallet",
   "tooltip.gardenkingmod.wallet.unbound": "Owner: Unbound",
   "tooltip.gardenkingmod.wallet.owner": "Owner: %s",
-  "tooltip.gardenkingmod.wallet.balance": "Bank Balance: %s Garden Coins",
+  "tooltip.gardenkingmod.wallet.balance": "Bank Balance: %s dollars",
   "message.gardenkingmod.market.empty": "There are no crops to sell.",
   "message.gardenkingmod.market.invalid": "Only Crops and Food can be sold here!",
   "message.gardenkingmod.market.sold": "Sold %1$s Croptopia crops for %2$s coins.",
   "message.gardenkingmod.market.sold.lifetime": "Sold %1$s Croptopia crops for %2$s coins. Lifetime earnings: %3$s coins.",
   "message.gardenkingmod.bank.not_owner": "Only the account owner may use this bank.",
-  "scoreboard.gardenkingmod.garden_currency": "Garden Coins",
+  "scoreboard.gardenkingmod.garden_currency": "Garden Dollars",
+  "scoreboard.gardenkingmod.garden_currency_bank": "Bank Dollars",
   "screen.gardenkingmod.market.sale_result_sold": "Sold: %1$s crops",
   "screen.gardenkingmod.market.sale_result_sold_detailed": "Sold: %1$s",
   "screen.gardenkingmod.market.sale_result_earned": "Earned: %1$s Garden Coins",
@@ -102,10 +101,8 @@
   "screen.gardenkingmod.market.tab.sell": "Sell",
   "screen.gardenkingmod.market.tab.buy": "Buy",
   "screen.gardenkingmod.market.offers": "OFFERS",
-  "screen.gardenkingmod.bank.total": "Total Balance: %s garden coins",
+  "screen.gardenkingmod.bank.total": "Total Balance: %s dollars",
   "screen.gardenkingmod.bank.slot.dollar": "Dollars",
-  "screen.gardenkingmod.bank.slot.coin_sack": "Coin Sacks",
-  "screen.gardenkingmod.bank.slot.garden_coin": "Garden Coins",
   "screen.gardenkingmod.market.cost_count": "%s required",
   "screen.gardenkingmod.gear_shop.offers": "OFFERS",
   "screen.gardenkingmod.gear_shop.buy_button": "BUY",
