Switch shops and translations to dollars

--- a/src/main/resources/assets/gardenkingmod/lang/en_us.json
+++ b/src/main/resources/assets/gardenkingmod/lang/en_us.json
@@ -94,7 +94,7 @@
   "scoreboard.gardenkingmod.garden_currency_bank": "Bank Dollars",
   "screen.gardenkingmod.market.sale_result_sold": "Sold: %1$s crops",
   "screen.gardenkingmod.market.sale_result_sold_detailed": "Sold: %1$s",
-  "screen.gardenkingmod.market.sale_result_earned": "Earned: %1$s Garden Dollars",
+  "screen.gardenkingmod.market.sale_result_earned": "Earned: %1$s dollars",
   "screen.gardenkingmod.market.sale_result_lifetime": "Lifetime Earnings: %1$s dollars",
   "screen.gardenkingmod.market.sale_result_item": "%1$s %2$s",
   "screen.gardenkingmod.market.sell": "Sell",
@@ -107,7 +107,7 @@
   "screen.gardenkingmod.gear_shop.offers": "OFFERS",
   "screen.gardenkingmod.gear_shop.buy_button": "BUY",
   "screen.gardenkingmod.gear_shop.cost_label": "COST:",
-  "screen.gardenkingmod.gear_shop.price": "%s Garden Dollars",
+  "screen.gardenkingmod.gear_shop.price": "$%s",
   "screen.gardenkingmod.gear_shop.cost_count": "%s required",
   "tooltip.gardenkingmod.crop_tier": "Tier: %s",
   "tooltip.gardenkingmod.built_in_fortune": "Built-in %s %s",
