Add deposit and withdraw controls to bank screen

--- a/src/main/resources/assets/gardenkingmod/lang/en_us.json
+++ b/src/main/resources/assets/gardenkingmod/lang/en_us.json
@@ -103,6 +103,9 @@
   "screen.gardenkingmod.market.offers": "OFFERS",
   "screen.gardenkingmod.bank.total": "Total Balance: %s dollars",
   "screen.gardenkingmod.bank.slot.dollar": "Dollars",
+  "screen.gardenkingmod.bank.withdraw": "Withdraw",
+  "screen.gardenkingmod.bank.deposit": "Deposit",
+  "screen.gardenkingmod.bank.withdraw_placeholder": "Amount",
   "screen.gardenkingmod.market.cost_count": "%s required",
   "screen.gardenkingmod.gear_shop.offers": "OFFERS",
   "screen.gardenkingmod.gear_shop.buy_button": "BUY",
