Refactor bank naming

--- a/src/main/resources/assets/gardenkingmod/lang/en_us.json
+++ b/src/main/resources/assets/gardenkingmod/lang/en_us.json
@@ -75,11 +75,11 @@
 
   "block.gardenkingmod.market_block": "Garden Market",
   "block.gardenkingmod.gear_shop_block": "Gear Shop",
-  "block.gardenkingmod.bank_block": "Village Bank",
+  "block.gardenkingmod.bank_block": "Garden Bank",
   "container.gardenkingmod.market": "Garden Market",
   "container.gardenkingmod.gear_shop": "Gear Shop",
   "container.gardenkingmod.scarecrow": "Scarecrow",
-  "container.gardenkingmod.bank": "Village Bank",
+  "container.gardenkingmod.bank": "Garden Bank",
   "item.gardenkingmod.dollar": "Dollar",
   "item.gardenkingmod.wallet": "Wallet",
   "item.gardenkingmod.special_fertilizer": "Special Fertilizer",
@@ -102,6 +102,7 @@
   "screen.gardenkingmod.market.tab.sell": "Sell",
   "screen.gardenkingmod.market.tab.buy": "Buy",
   "screen.gardenkingmod.market.offers": "OFFERS",
+  "screen.gardenkingmod.bank.title": "%s's Bank",
   "screen.gardenkingmod.bank.total": "Total Balance: %s dollars",
   "screen.gardenkingmod.bank.slot.dollar": "Dollars",
   "screen.gardenkingmod.bank.withdraw": "Withdraw",
