Fix invalid JSON in English localization

--- a/src/main/resources/assets/gardenkingmod/lang/en_us.json
+++ b/src/main/resources/assets/gardenkingmod/lang/en_us.json
@@ -241,94 +241,94 @@
   "subtitles.gardenkingmod.block.scarecrow.activate": "Scarecrow ward pulses",
   "subtitles.gardenkingmod.block.scarecrow.ambient": "Scarecrow ward hums",
 
-  "particle.gardenkingmod.scarecrow_ward": "Scarecrow Ward Wisps"
-  "item.gardenkingmod.enchanted_almond": "Enchanted Almond"
-  "item.gardenkingmod.enchanted_apple": "Enchanted Apple"
-  "item.gardenkingmod.enchanted_apricot": "Enchanted Apricot"
-  "item.gardenkingmod.enchanted_artichoke": "Enchanted Artichoke"
-  "item.gardenkingmod.enchanted_asparagus": "Enchanted Asparagus"
-  "item.gardenkingmod.enchanted_avocado": "Enchanted Avocado"
-  "item.gardenkingmod.enchanted_banana": "Enchanted Banana"
-  "item.gardenkingmod.enchanted_barley": "Enchanted Barley"
-  "item.gardenkingmod.enchanted_basil": "Enchanted Basil"
-  "item.gardenkingmod.enchanted_beetroot": "Enchanted Beetroot"
-  "item.gardenkingmod.enchanted_bellpepper": "Enchanted Bellpepper"
-  "item.gardenkingmod.enchanted_blackbean": "Enchanted Blackbean"
-  "item.gardenkingmod.enchanted_blackberry": "Enchanted Blackberry"
-  "item.gardenkingmod.enchanted_blueberry": "Enchanted Blueberry"
-  "item.gardenkingmod.enchanted_broccoli": "Enchanted Broccoli"
-  "item.gardenkingmod.enchanted_cabbage": "Enchanted Cabbage"
-  "item.gardenkingmod.enchanted_cantaloupe": "Enchanted Cantaloupe"
-  "item.gardenkingmod.enchanted_carrot": "Enchanted Carrot"
-  "item.gardenkingmod.enchanted_cashew": "Enchanted Cashew"
-  "item.gardenkingmod.enchanted_cauliflower": "Enchanted Cauliflower"
-  "item.gardenkingmod.enchanted_celery": "Enchanted Celery"
-  "item.gardenkingmod.enchanted_cherry": "Enchanted Cherry"
-  "item.gardenkingmod.enchanted_chile_pepper": "Enchanted Chile Pepper"
-  "item.gardenkingmod.enchanted_coconut": "Enchanted Coconut"
-  "item.gardenkingmod.enchanted_coffee_bean": "Enchanted Coffee Bean"
-  "item.gardenkingmod.enchanted_corn": "Enchanted Corn"
-  "item.gardenkingmod.enchanted_cranberry": "Enchanted Cranberry"
-  "item.gardenkingmod.enchanted_cucumber": "Enchanted Cucumber"
-  "item.gardenkingmod.enchanted_currant": "Enchanted Currant"
-  "item.gardenkingmod.enchanted_date": "Enchanted Date"
-  "item.gardenkingmod.enchanted_dragonfruit": "Enchanted Dragonfruit"
-  "item.gardenkingmod.enchanted_eggplant": "Enchanted Eggplant"
-  "item.gardenkingmod.enchanted_elderberry": "Enchanted Elderberry"
-  "item.gardenkingmod.enchanted_fig": "Enchanted Fig"
-  "item.gardenkingmod.enchanted_garlic": "Enchanted Garlic"
-  "item.gardenkingmod.enchanted_ginger": "Enchanted Ginger"
-  "item.gardenkingmod.enchanted_grape": "Enchanted Grape"
-  "item.gardenkingmod.enchanted_grapefruit": "Enchanted Grapefruit"
-  "item.gardenkingmod.enchanted_greenbean": "Enchanted Greenbean"
-  "item.gardenkingmod.enchanted_greenonion": "Enchanted Greenonion"
-  "item.gardenkingmod.enchanted_honeydew": "Enchanted Honeydew"
-  "item.gardenkingmod.enchanted_hop": "Enchanted Hop"
-  "item.gardenkingmod.enchanted_kale": "Enchanted Kale"
-  "item.gardenkingmod.enchanted_kiwi": "Enchanted Kiwi"
-  "item.gardenkingmod.enchanted_kumquat": "Enchanted Kumquat"
-  "item.gardenkingmod.enchanted_leek": "Enchanted Leek"
-  "item.gardenkingmod.enchanted_lemon": "Enchanted Lemon"
-  "item.gardenkingmod.enchanted_lettuce": "Enchanted Lettuce"
-  "item.gardenkingmod.enchanted_lime": "Enchanted Lime"
-  "item.gardenkingmod.enchanted_mango": "Enchanted Mango"
-  "item.gardenkingmod.enchanted_mustard": "Enchanted Mustard"
-  "item.gardenkingmod.enchanted_nectarine": "Enchanted Nectarine"
-  "item.gardenkingmod.enchanted_nutmeg": "Enchanted Nutmeg"
-  "item.gardenkingmod.enchanted_oat": "Enchanted Oat"
-  "item.gardenkingmod.enchanted_olive": "Enchanted Olive"
-  "item.gardenkingmod.enchanted_onion": "Enchanted Onion"
-  "item.gardenkingmod.enchanted_orange": "Enchanted Orange"
-  "item.gardenkingmod.enchanted_peach": "Enchanted Peach"
-  "item.gardenkingmod.enchanted_peanut": "Enchanted Peanut"
-  "item.gardenkingmod.enchanted_pear": "Enchanted Pear"
-  "item.gardenkingmod.enchanted_pecan": "Enchanted Pecan"
-  "item.gardenkingmod.enchanted_pepper": "Enchanted Pepper"
-  "item.gardenkingmod.enchanted_persimmon": "Enchanted Persimmon"
-  "item.gardenkingmod.enchanted_pineapple": "Enchanted Pineapple"
-  "item.gardenkingmod.enchanted_plum": "Enchanted Plum"
-  "item.gardenkingmod.enchanted_potato": "Enchanted Potato"
-  "item.gardenkingmod.enchanted_radish": "Enchanted Radish"
-  "item.gardenkingmod.enchanted_raspberry": "Enchanted Raspberry"
-  "item.gardenkingmod.enchanted_rhubarb": "Enchanted Rhubarb"
-  "item.gardenkingmod.enchanted_rice": "Enchanted Rice"
-  "item.gardenkingmod.enchanted_rutabaga": "Enchanted Rutabaga"
-  "item.gardenkingmod.enchanted_saguaro": "Enchanted Saguaro"
-  "item.gardenkingmod.enchanted_soybean": "Enchanted Soybean"
-  "item.gardenkingmod.enchanted_spinach": "Enchanted Spinach"
-  "item.gardenkingmod.enchanted_squash": "Enchanted Squash"
-  "item.gardenkingmod.enchanted_starfruit": "Enchanted Starfruit"
-  "item.gardenkingmod.enchanted_strawberry": "Enchanted Strawberry"
-  "item.gardenkingmod.enchanted_sweetpotato": "Enchanted Sweetpotato"
-  "item.gardenkingmod.enchanted_tea": "Enchanted Tea"
-  "item.gardenkingmod.enchanted_tomatillo": "Enchanted Tomatillo"
-  "item.gardenkingmod.enchanted_tomato": "Enchanted Tomato"
-  "item.gardenkingmod.enchanted_turmeric": "Enchanted Turmeric"
-  "item.gardenkingmod.enchanted_turnip": "Enchanted Turnip"
-  "item.gardenkingmod.enchanted_vanilla": "Enchanted Vanilla"
-  "item.gardenkingmod.enchanted_walnut": "Enchanted Walnut"
-  "item.gardenkingmod.enchanted_wheat": "Enchanted Wheat"
-  "item.gardenkingmod.enchanted_yam": "Enchanted Yam"
+  "particle.gardenkingmod.scarecrow_ward": "Scarecrow Ward Wisps",
+  "item.gardenkingmod.enchanted_almond": "Enchanted Almond",
+  "item.gardenkingmod.enchanted_apple": "Enchanted Apple",
+  "item.gardenkingmod.enchanted_apricot": "Enchanted Apricot",
+  "item.gardenkingmod.enchanted_artichoke": "Enchanted Artichoke",
+  "item.gardenkingmod.enchanted_asparagus": "Enchanted Asparagus",
+  "item.gardenkingmod.enchanted_avocado": "Enchanted Avocado",
+  "item.gardenkingmod.enchanted_banana": "Enchanted Banana",
+  "item.gardenkingmod.enchanted_barley": "Enchanted Barley",
+  "item.gardenkingmod.enchanted_basil": "Enchanted Basil",
+  "item.gardenkingmod.enchanted_beetroot": "Enchanted Beetroot",
+  "item.gardenkingmod.enchanted_bellpepper": "Enchanted Bellpepper",
+  "item.gardenkingmod.enchanted_blackbean": "Enchanted Blackbean",
+  "item.gardenkingmod.enchanted_blackberry": "Enchanted Blackberry",
+  "item.gardenkingmod.enchanted_blueberry": "Enchanted Blueberry",
+  "item.gardenkingmod.enchanted_broccoli": "Enchanted Broccoli",
+  "item.gardenkingmod.enchanted_cabbage": "Enchanted Cabbage",
+  "item.gardenkingmod.enchanted_cantaloupe": "Enchanted Cantaloupe",
+  "item.gardenkingmod.enchanted_carrot": "Enchanted Carrot",
+  "item.gardenkingmod.enchanted_cashew": "Enchanted Cashew",
+  "item.gardenkingmod.enchanted_cauliflower": "Enchanted Cauliflower",
+  "item.gardenkingmod.enchanted_celery": "Enchanted Celery",
+  "item.gardenkingmod.enchanted_cherry": "Enchanted Cherry",
+  "item.gardenkingmod.enchanted_chile_pepper": "Enchanted Chile Pepper",
+  "item.gardenkingmod.enchanted_coconut": "Enchanted Coconut",
+  "item.gardenkingmod.enchanted_coffee_bean": "Enchanted Coffee Bean",
+  "item.gardenkingmod.enchanted_corn": "Enchanted Corn",
+  "item.gardenkingmod.enchanted_cranberry": "Enchanted Cranberry",
+  "item.gardenkingmod.enchanted_cucumber": "Enchanted Cucumber",
+  "item.gardenkingmod.enchanted_currant": "Enchanted Currant",
+  "item.gardenkingmod.enchanted_date": "Enchanted Date",
+  "item.gardenkingmod.enchanted_dragonfruit": "Enchanted Dragonfruit",
+  "item.gardenkingmod.enchanted_eggplant": "Enchanted Eggplant",
+  "item.gardenkingmod.enchanted_elderberry": "Enchanted Elderberry",
+  "item.gardenkingmod.enchanted_fig": "Enchanted Fig",
+  "item.gardenkingmod.enchanted_garlic": "Enchanted Garlic",
+  "item.gardenkingmod.enchanted_ginger": "Enchanted Ginger",
+  "item.gardenkingmod.enchanted_grape": "Enchanted Grape",
+  "item.gardenkingmod.enchanted_grapefruit": "Enchanted Grapefruit",
+  "item.gardenkingmod.enchanted_greenbean": "Enchanted Greenbean",
+  "item.gardenkingmod.enchanted_greenonion": "Enchanted Greenonion",
+  "item.gardenkingmod.enchanted_honeydew": "Enchanted Honeydew",
+  "item.gardenkingmod.enchanted_hop": "Enchanted Hop",
+  "item.gardenkingmod.enchanted_kale": "Enchanted Kale",
+  "item.gardenkingmod.enchanted_kiwi": "Enchanted Kiwi",
+  "item.gardenkingmod.enchanted_kumquat": "Enchanted Kumquat",
+  "item.gardenkingmod.enchanted_leek": "Enchanted Leek",
+  "item.gardenkingmod.enchanted_lemon": "Enchanted Lemon",
+  "item.gardenkingmod.enchanted_lettuce": "Enchanted Lettuce",
+  "item.gardenkingmod.enchanted_lime": "Enchanted Lime",
+  "item.gardenkingmod.enchanted_mango": "Enchanted Mango",
+  "item.gardenkingmod.enchanted_mustard": "Enchanted Mustard",
+  "item.gardenkingmod.enchanted_nectarine": "Enchanted Nectarine",
+  "item.gardenkingmod.enchanted_nutmeg": "Enchanted Nutmeg",
+  "item.gardenkingmod.enchanted_oat": "Enchanted Oat",
+  "item.gardenkingmod.enchanted_olive": "Enchanted Olive",
+  "item.gardenkingmod.enchanted_onion": "Enchanted Onion",
+  "item.gardenkingmod.enchanted_orange": "Enchanted Orange",
+  "item.gardenkingmod.enchanted_peach": "Enchanted Peach",
+  "item.gardenkingmod.enchanted_peanut": "Enchanted Peanut",
+  "item.gardenkingmod.enchanted_pear": "Enchanted Pear",
+  "item.gardenkingmod.enchanted_pecan": "Enchanted Pecan",
+  "item.gardenkingmod.enchanted_pepper": "Enchanted Pepper",
+  "item.gardenkingmod.enchanted_persimmon": "Enchanted Persimmon",
+  "item.gardenkingmod.enchanted_pineapple": "Enchanted Pineapple",
+  "item.gardenkingmod.enchanted_plum": "Enchanted Plum",
+  "item.gardenkingmod.enchanted_potato": "Enchanted Potato",
+  "item.gardenkingmod.enchanted_radish": "Enchanted Radish",
+  "item.gardenkingmod.enchanted_raspberry": "Enchanted Raspberry",
+  "item.gardenkingmod.enchanted_rhubarb": "Enchanted Rhubarb",
+  "item.gardenkingmod.enchanted_rice": "Enchanted Rice",
+  "item.gardenkingmod.enchanted_rutabaga": "Enchanted Rutabaga",
+  "item.gardenkingmod.enchanted_saguaro": "Enchanted Saguaro",
+  "item.gardenkingmod.enchanted_soybean": "Enchanted Soybean",
+  "item.gardenkingmod.enchanted_spinach": "Enchanted Spinach",
+  "item.gardenkingmod.enchanted_squash": "Enchanted Squash",
+  "item.gardenkingmod.enchanted_starfruit": "Enchanted Starfruit",
+  "item.gardenkingmod.enchanted_strawberry": "Enchanted Strawberry",
+  "item.gardenkingmod.enchanted_sweetpotato": "Enchanted Sweetpotato",
+  "item.gardenkingmod.enchanted_tea": "Enchanted Tea",
+  "item.gardenkingmod.enchanted_tomatillo": "Enchanted Tomatillo",
+  "item.gardenkingmod.enchanted_tomato": "Enchanted Tomato",
+  "item.gardenkingmod.enchanted_turmeric": "Enchanted Turmeric",
+  "item.gardenkingmod.enchanted_turnip": "Enchanted Turnip",
+  "item.gardenkingmod.enchanted_vanilla": "Enchanted Vanilla",
+  "item.gardenkingmod.enchanted_walnut": "Enchanted Walnut",
+  "item.gardenkingmod.enchanted_wheat": "Enchanted Wheat",
+  "item.gardenkingmod.enchanted_yam": "Enchanted Yam",
   "item.gardenkingmod.enchanted_zucchini": "Enchanted Zucchini"
 
 }
