--- a/src/main/resources/assets/gardenkingmod/lang/en_us.json
+++ b/src/main/resources/assets/gardenkingmod/lang/en_us.json
@@ -341,6 +341,8 @@
   "screen.gardenkingmod.skills.header.total_xp_label": "Total XP:",
   "screen.gardenkingmod.skills.header.progress_label": "Progress:",
   "screen.gardenkingmod.skills.chef.current_level_label": "Level:",
+  "screen.gardenkingmod.skills.upgrade_button": "Upgrade",
+  "screen.gardenkingmod.skills.description_placeholder": "Select a skill to view its details.",
   "screen.gardenkingmod.skills.allocate": "Allocate",
   "screen.gardenkingmod.skills.points_spent": "Points Spent: %s",
   "key.gardenkingmod.open_skills": "Open Skill Screen",
