Point oven screen at packaged GUI texture

--- a/src/main/resources/assets/gardenkingmod/lang/en_us.json
+++ b/src/main/resources/assets/gardenkingmod/lang/en_us.json
@@ -76,10 +76,12 @@
   "block.gardenkingmod.market_block": "Garden Market",
   "block.gardenkingmod.gear_shop_block": "Gear Shop",
   "block.gardenkingmod.bank_block": "Garden Bank",
+  "block.gardenkingmod.garden_oven": "Garden Oven",
   "container.gardenkingmod.market": "Garden Market",
   "container.gardenkingmod.gear_shop": "Gear Shop",
   "container.gardenkingmod.scarecrow": "Scarecrow",
   "container.gardenkingmod.bank": "Garden Bank",
+  "container.gardenkingmod.garden_oven": "Garden Oven",
   "item.gardenkingmod.dollar": "Dollar",
   "item.gardenkingmod.wallet": "Wallet",
   "item.gardenkingmod.special_fertilizer": "Special Fertilizer",
