Add market refresh timer to buy screen

--- a/src/main/resources/assets/gardenkingmod/lang/en_us.json
+++ b/src/main/resources/assets/gardenkingmod/lang/en_us.json
@@ -105,6 +105,7 @@
   "screen.gardenkingmod.market.tab.sell": "Sell",
   "screen.gardenkingmod.market.tab.buy": "Buy",
   "screen.gardenkingmod.market.offers": "OFFERS",
+  "screen.gardenkingmod.market.refresh_time": "Refresh Time",
   "screen.gardenkingmod.bank.title": "%s's Bank",
   "screen.gardenkingmod.bank.total": "Total Balance: %s dollars",
   "screen.gardenkingmod.bank.slot.dollar": "Dollars",
