new market offer schema

--- a/src/main/resources/assets/gardenkingmod/lang/en_us.json
+++ b/src/main/resources/assets/gardenkingmod/lang/en_us.json
@@ -136,7 +136,7 @@
   "item.gardenkingmod.rotten_basil": "Rotten Basil",
   "item.gardenkingmod.rotten_beetroot": "Rotten Beetroot",
   "item.gardenkingmod.rotten_bellpepper": "Rotten Bellpepper",
-  "item.gardenkingmod.rotten_blackbean": "Rotten Blackbean",
+  "item.gardenkingmod.rotten_blackbean": "Rotten Black bean",
   "item.gardenkingmod.rotten_blackberry": "Rotten Blackberry",
   "item.gardenkingmod.rotten_blueberry": "Rotten Blueberry",
   "item.gardenkingmod.rotten_broccoli": "Rotten Broccoli",
@@ -200,7 +200,7 @@
   "item.gardenkingmod.rotten_soybean": "Rotten Soybean",
   "item.gardenkingmod.rotten_spinach": "Rotten Spinach",
   "item.gardenkingmod.rotten_squash": "Rotten Squash",
-  "item.gardenkingmod.rotten_starfruit": "Rotten Starfruit",
+  "item.gardenkingmod.rotten_starfruit": "Rotten Star Fruit",
   "item.gardenkingmod.rotten_strawberry": "Rotten Strawberry",
   "item.gardenkingmod.rotten_sweetpotato": "Rotten Sweetpotato",
   "item.gardenkingmod.rotten_tea_leaves": "Rotten Tea",
